test_regress/t/t_assoc_wildcard_map.out
%Error-UNSUPPORTED: t/t_assoc_wildcard_map.v:17:15: Unsupported: Wildcard array 'map' method (IEEE 1800-2023 7.12.5)
                                                  : ... note: In instance 't'
   17 |       res = a.map(el) with (el == 2);
      |               ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
